--- a/bowser.html
+++ b/bowser.html
@@ -14,7 +14,7 @@
 				<img src="http://giphygifs.s3.amazonaws.com/media/iR6yuZyNBbwI/giphy.gif" style="width:100%">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#0b8c59">Y</h1><p class="firstpara">ou’re a spineless monster!”</em> you say.</p>
+				<h1 id="firstletter" style="background-color:#0b8c59">Y</h1><p id="firstpara">ou’re a spineless monster!”</em> you say.</p>
 				<p>Bowser looks furious. “I am a monster, but I have tons of spines!”</p>
 				<p>From behind him, you hear a choked laugh.</p>
 			</div>
