--- a/daisy.html
+++ b/daisy.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/fVeLSepJL5ziE18ByX/giphy.gif" style="height: 200px;text-align:center;">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#cc9900">Y</h1><p class="firstpara">ou need an ally,”</em> said Daisy over the phone. “Isn’t there someone in the castle you can get to help you?”</p>
+				<h1 id="firstletter" style="background-color:#cc9900">Y</h1><p id="firstpara">ou need an ally,”</em> said Daisy over the phone. “Isn’t there someone in the castle you can get to help you?”</p>
 				<p>“I don’t need any help,” you say defiantly.</p>
 				<p>“You’re right,” said Daisy. “But it’ll be easier to escape if you do.”</p>
 			</div>
