--- a/end.html
+++ b/end.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/HNeq4AKsyh7hK/giphy.gif" style="height: 250px;text-align:center;">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#cc0d63">Y</h1><p class="firstpara">ou hit Bowser over the head with your frying pan.</p>
+				<h1 id="firstletter" style="background-color:#cc0d63">Y</h1><p id="firstpara">ou hit Bowser over the head with your frying pan.</p>
 				<p>He passes out and you go back to your own castle, where you rule over Mushroom Kingdom wisely and justly.</p>
 			</div>
 		</div>
