--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/83fzFhaPgXOSACHJc8/giphy.gif" style="width:100%">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#ff54a1">Y</h1><p class="firstpara">ou are a woman locked in a castle.</p>
+				<h1 id="firstletter" style="background-color:#ff54a1">Y</h1><p id="firstpara">ou are a woman locked in a castle.</p>
 				<p>Your captor tells you that you need to wait for a hero to come rescue you, but you think that’s rubbish.</p>
 			</div>
 		</div>
