--- a/peach.html
+++ b/peach.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/56R7Vj6mDZkNa/giphy.gif" style="width: 100%;text-align:center;">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#cc0d63">I</h1><p class="firstpara">t takes weeks of planning, but you devise an elaborate escape plan involving ropes, ladders, a frying pan, and your umbrella.</p>
+				<h1 id="firstletter" style="background-color:#cc0d63">I</h1><p id="firstpara">t takes weeks of planning, but you devise an elaborate escape plan involving ropes, ladders, a frying pan, and your umbrella.</p>
 	<p>You made it out all by your own damn self!</p>
 			</div>
 		</div>
