--- a/toad.html
+++ b/toad.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/MuE9MGdYDmem1FwE0o/giphy.gif" style="width: 100%;text-align:center;">
 			</div>
 			<div style="padding-top:30px;">
-				<h1 class="firstletter" style="background-color:#da3832">Y</h1><p class="firstpara">ou go down to the kitchen</em>, where you meet a half-man, half-mushroom.</p>
+				<h1 id="firstletter" style="background-color:#da3832">Y</h1><p id="firstpara">ou go down to the kitchen</em>, where you meet a half-man, half-mushroom.</p>
 	<p>“Let’s do it! Let’s get you out!” he says.</p>
 	<p>He sneaks a poisoned mushroom into your captor’s soup, which knocks him out for three days. You and Toad stroll out of the castle of your own volition.</p>
 			</div>
