--- a/mario.html
+++ b/mario.html
@@ -14,7 +14,7 @@
 				<img src="https://media.giphy.com/media/fAnEC88LccN7a/giphy.gif" style="height: 150px;text-align:center;">
 			</div>
 			<div style="padding-top:20px;">
-				<h1 class="firstletter" style="background-color:#ff3939">Y</h1><p class="firstpara">ou peer over Bowser’s shoulder. It’s your supposed hero, Mario. He’s been captured by Bowser too and is locked in a cage!</p>
+				<h1 id="firstletter" style="background-color:#ff3939">Y</h1><p id="firstpara">ou peer over Bowser’s shoulder. It’s your supposed hero, Mario. He’s been captured by Bowser too and is locked in a cage!</p>
 				<p>You sigh. Now you have to break him out yourself.</p>
 				<p>The next day, you turn one of Bowser’s fireballs against him and singe his tail. While he’s wailing over his hurt tail, you takes his key for the cage. You let Mario out and tell him to never try to rescue you again.</p>
 			</div>
